--- a/front-web-react/package.json
+++ b/front-web-react/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "5.1.7",
     "bootstrap": "^5.1.3",
     "node-sass": "4.14.1",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
